--- a/templates/concept4/concept4.3.html
+++ b/templates/concept4/concept4.3.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Link to the common CSS file -->
+    <link rel="stylesheet" href="../static/css/common.css" />
+
+    <!-- Your existing script and stylesheet links -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/concept4.css" />
-
+    <link rel="stylesheet" href="../static/css/concept1.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -24,20 +27,28 @@
   <body>
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
+
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2>Earth element – clay + terracotta</h2>
-          <div class="row">
-            <div class="col">
-                <img class="img-fluid" src="{{ url_for('static', filename='images/earth-bad.png') }}"/>
-            </div>
-            <div class="col">
-                <div class="text-bubble">However, <b>avoid metal</b> objects in the bedroom as the metal element <b>clashes</b> with earth. Too much metal energy is associated with feelings of <b>being weighed down</b>.</div>
-                <button onclick="window.location.href='/concept4-2'">Prev</button>
-                <button onclick="window.location.href='/concept4-4'" class="btn-next mt-3">Next</button>
-            </div>
-          </div>
+          <h2 style="margin-left: 240px; padding: 10px" >Earth Element</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 center">
+          <img src="{{ url_for('static', filename='images/earth-4.png') }}" style="width:600px; margin-top: 0px"/>
+          <br>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row center" style="margin-left: 240px; margin-right: 240px">
+        <p>Choose <b>cotton</b> or <b>wool rugs</b> of balanced shapes to further boost groundedness and stability in your bedroom.</p>
+        <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
+          <button onclick="window.location.href='/concept4-2'" style="margin-right: 500px;">Prev</button>
+          <button onclick="window.location.href='/concept4-4'">Next</button>
         </div>
       </div>
     </div>
